data finalizada done
fix no template do detalhe da tarefa ( mostrar data finalizada e o prazo estipulado )

--- a/pmsb_web/pinax/messages/templates/pinax/messages/inbox.html
+++ b/pmsb_web/pinax/messages/templates/pinax/messages/inbox.html
@@ -179,7 +179,7 @@
                                         </div>
                                         <div class="col-sm">
                                             <p class="content" style="text-align: right;">
-                                                <strong>Finalizada em:</strong> {{ thread.latest_message.sent_at }}</p>
+                                                <strong>Finalizada em:</strong> {{ thread.data_finalizada }}</p>
                                         </div>
                                     </div>
                                     <div class="row">
@@ -239,7 +239,7 @@
                                         </div>
                                         <div class="col-sm">
                                             <p class="content" style="text-align: right;">
-                                                <strong>Finalizada em:</strong> {{ thread.latest_message.sent_at }}</p>
+                                                <strong>Finalizada em:</strong> {{ thread.data_finalizada }}</p>
                                         </div>
                                     </div>
                                     <div class="row">
