QuestionarioListView lista somente questionarios do usuario, QuestionarioCreateView questionario é criado com usuario logado como criador, QuestionarioDeleteView espera confirmação do id por um formulario para deletar a instancia, PerguntaCreateView e PerguntaUpdateView pegam a instancia de formulario correta dinamicamente, PerguntaDoQuestionarioDeleteView deleta domente ligação do questionario com pergunta

--- a/pmsb_web/questionarios/templates/questionarios/base.html
+++ b/pmsb_web/questionarios/templates/questionarios/base.html
@@ -1,11 +1,15 @@
 <html>
     <head>
         <title>
-            Base
+            {% block titulo %} PMSB | Questionarios | {% endblock titulo %}
         </title>
     </head>
     <body>
-        {% include "questionarios/includes/in_base.html" %}
+        <ul>
+            {% block ul_menu %}
+            <li><a href="{% url "questionarios:list" %}">inicio</a></li>
+            {% endblock ul_menu%}
+        </ul>
         <div>
         {% block conteudo%}
             Treta   
