--- a/pmsb_web/conta/templates/conta/base.html
+++ b/pmsb_web/conta/templates/conta/base.html
@@ -17,6 +17,9 @@
   <!-- Main styles for this application-->
   <link href="{% static 'css/style.css' %}" rel="stylesheet">
   <link href="{% static 'vendors/pace-progress/css/pace.min.css' %}" rel="stylesheet">
+  <!-- Dtree -->
+  <link rel="stylesheet" href="{% static 'node_modules/dtree/dtree.css' %}" type="text/css" />
+  <script type="text/javascript" src="{% static 'node_modules/dtree/dtree.js' %}"></script>
 </head>
 
 {% block body %} {% endblock %}
