--- a/pmsb_web/conta/templates/dashboard/index.html
+++ b/pmsb_web/conta/templates/dashboard/index.html
@@ -5,23 +5,6 @@
     <button class="navbar-toggler sidebar-toggler d-lg-none mr-auto" type="button" data-toggle="sidebar-show">
       <span class="navbar-toggler-icon"></span>
     </button>
-    <!-- <a class="navbar-brand" href="#">
-      <img class="navbar-brand-full"  width="100" height="100" alt="Logo">
-    </a> -->
-    <!-- <button class="navbar-toggler sidebar-toggler d-md-down-none" type="button" data-toggle="sidebar-lg-show">
-            <span class="navbar-toggler-icon"></span>
-          </button> -->
-    <!-- <ul class="nav navbar-nav d-md-down-none">
-            <li class="nav-item px-3">
-              <a class="nav-link" href="#">Dashboard</a>
-            </li>
-            <li class="nav-item px-3">
-              <a class="nav-link" href="#">Users</a>
-            </li>
-            <li class="nav-item px-3">
-              <a class="nav-link" href="#">Settings</a>
-            </li>
-          </ul> -->
     <ul class="nav navbar-nav ml-auto">
       <li class="nav-item dropdown">
         {% if user.foto %}
@@ -33,67 +16,34 @@
           <img class="img-avatar" src="media/default.png" alt="">
         </a>
         {% endif %}
-
         <div class="dropdown-menu dropdown-menu-right">
           <div class="dropdown-header text-center">
             <strong>Usuário</strong>
           </div>
           <a class="dropdown-item" href="{% url 'conta:user_dados'  %}">
             <i class="fa icon-user"></i> Conta
-            <!-- <span class="badge badge-info">42</span> -->
           </a>
-          <!-- <a class="dropdown-item" href="#">
-            <i class="fa icon-user"></i> Perfil
-          </a> -->
-          <!-- <a class="dropdown-item" href="#">
-            <i class="fa icon-envelope-letter"></i> Mensagens
-          </a> -->
-          <!-- <a class="dropdown-item" href="#">
-                  <i class="fa fa-comments"></i> Comments
-                  <span class="badge badge-warning">42</span>
-                </a> -->
           <div class="dropdown-header text-center">
             <strong>Tarefas</strong>
           </div>
-          
           <a class="dropdown-item" href="{% url 'pinax_messages:inbox' %}">
             <i class="fa fa-tasks"></i> Tarefas
-            <!-- <span class="badge badge-danger">42</span> -->
           </a>
           <div class="dropdown-header text-center">
             <strong>Configurações</strong>
           </div>
-          <!-- <a class="dropdown-item" href="#">
-                  <i class="fa fa-wrench"></i> Settings</a> -->
-          <!-- <a class="dropdown-item" href="#">
-                  <i class="fa fa-usd"></i> Payments
-                  <span class="badge badge-secondary">42</span>
-                </a> -->
-          <!-- <a class="dropdown-item" href="#">
-                  <i class="fa fa-file"></i> Projects
-                  <span class="badge badge-primary">42</span>
-                </a> -->
           <div class="divider"></div>
-          <!-- <a class="dropdown-item" href="#">
-                  <i class="fa fa-shield"></i> Lock Account</a> -->
           <a class="dropdown-item" href="{% url 'conta:logout' %}">
             <i class="icon-logout"></i> Sair</a>
         </div>
       </li>
     </ul>
-    <!-- <button class="navbar-toggler aside-menu-toggler d-md-down-none" type="button" data-toggle="aside-menu-lg-show">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <button class="navbar-toggler aside-menu-toggler d-lg-none" type="button" data-toggle="aside-menu-show">
-      <span class="navbar-toggler-icon"></span> -->
     </button>
   </header>
   <div class="app-body">
     <div class="sidebar">
       <nav class="sidebar-nav ps ps--active-y">
         <ul class="nav">
-          <!-- <li class="nav-title" style="text-align: center;">TÍTULO</li> -->
-
           <li class="nav-item nav-dropdown open">
             <a class="nav-link nav-dropdown-toggle" href="#">
               <i class="nav-icon icon-list"></i>Tarefas</a>
@@ -106,48 +56,30 @@
                 <a class="nav-link" href="{% url 'pinax_messages:message_create' %}">
                   <i class="nav-icon icon-note"></i>Nova Tarefa</a>
               </li>
-              <!-- <li class="nav-item">
-                <a class="nav-link" href="base/tooltips.html">
-                  <i class="nav-icon icon-settings"></i> bbbb</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="base/tooltips.html">
-                  <i class="nav-icon icon-settings"></i> cccc</a>
-              </li> -->
-            </ul>
-          </li>
-          
-          <!-- <li class="nav-item nav-dropdown open">
-            <a class="nav-link nav-dropdown-toggle" href="#">
-              <i class="nav-icon icon-list"></i>Menu 02</a>
-            <ul class="nav-dropdown-items">
-              <li class="nav-item">
-                <a class="nav-link" href="#">
-                  <i class="nav-icon icon-drop"></i>Funcao 2.0</a>
-              </li>
             </ul>
           </li>
           <li class="nav-item nav-dropdown open">
             <a class="nav-link nav-dropdown-toggle" href="#">
-              <i class="nav-icon icon-list"></i>Menu 03</a>
+                <i class="fa fa-sitemap"></i>Organograma</a>
             <ul class="nav-dropdown-items">
               <li class="nav-item">
-                <a class="nav-link" href="#">
-                  <i class="nav-icon icon-note"></i>Funcao 3.0</a>
+                <a class="nav-link" href="{% url 'conta:departamento_tree' %}">
+                  <i class="fa fa-building-o"></i>Departamentos</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">
-                  <i class="nav-icon icon-layers"></i>Funcao 3.1</a>
+                <a class="nav-link" href="{% url 'conta:cargo_tree' %}">
+                  <i class="fa fa-address-card"></i>Cargos</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="{% url 'conta:hierarquia_tree' %}">
+                  <i class="nav-icon icon-people"></i>Hierárquia</a>
               </li>
             </ul>
-          </li> -->
+          </li>
         </ul>
-
       </nav>
     </div>
     <main class="main">
-
-
       <div class="container-fluid">
         <div class="animated fadeIn">
           {% block main %} {% endblock %}
