--- a/pmsb_web/questionarios/templates/questionarios/base.html
+++ b/pmsb_web/questionarios/templates/questionarios/base.html
@@ -1,19 +1,34 @@
-<html>
-    <head>
-        <title>
-            {% block titulo %} PMSB | Questionarios | {% endblock titulo %}
-        </title>
-    </head>
-    <body>
-        <ul>
-            {% block ul_menu %}
-            <li><a href="{% url "questionarios:list" %}">inicio</a></li>
-            {% endblock ul_menu%}
-        </ul>
-        <div>
+{% extends "dashboard/index.html" %}
+
+{% block main %}
+<style>
+#questionarios .row{
+    margin-top: 20px;
+    margin-bottom: 20px;
+}
+</style>
+
+<div id = "questionarios" class="row">
+    <div class="col-lg-6 offset-lg-3">
+
+    <div class="row">
+        <div class="col-lg-12">
+        {% block ul_menu %}
+        <a class="btn btn-success" href="{% url "questionarios:list" %}">inicio</a>
+        <a class="btn btn-success" href=" {% url "questionarios:create"%}">Novo Questionario</a>
+        {% endblock ul_menu%}
+        </div>
+    </div>       
+
+    <div class="row">
+        <div class="col-lg-12">
         {% block conteudo%}
             Treta   
         {% endblock %}
         </div>
-    </body>
-</html>
+    </div>
+
+    </div><!--col-lg-12-->
+</div><!-- row -->
+
+{% endblock %}
