--- a/pmsb_web/questionarios/templates/questionarios/list_questionario.html
+++ b/pmsb_web/questionarios/templates/questionarios/list_questionario.html
@@ -1,27 +1,32 @@
 {% extends "questionarios/base.html" %}
 
-
-{% block titulo %} {{block.super}} listagem {% endblock titulo %}
-
 {% block conteudo %}
-<a href=" {% url "questionarios:create"%}">Novo Questionario</a>
 
-<ol>
-    {% for questionario in object_list %}
-    <li>
-        Questionario: {{questionario.nome}}, id: {{questionario.id}}
-        [ <a href="{% url "questionarios:update" questionario.id %}">Editar</a> |<a href="{% url "questionarios:delete" questionario.id %}">Deletar</a> ]
-        [ <a href="{% url "questionarios:create_pergunta_tipo" questionario.id %}">Adicionar Pergunta</a> |<a href="{% url "questionarios:delete" questionario.id %}">Ordenar</a> ]
-        <ul>
-            {% for pergunta_do_questionario in questionario.perguntas_ordenadas %}
-            <li>
-                ordem: {{pergunta_do_questionario.ordem}} - {{pergunta_do_questionario.pergunta}}
-                <a href="{% url "questionarios:update_pergunta" pergunta_do_questionario.questionario.id pergunta_do_questionario.pergunta.id %}">Editar Pergunta</a> 
-                | <a href="{% url "questionarios:delete_pergunta_do_questionario" pergunta_do_questionario.id %}">Remover Pergunta</a>
-            </li>
-            {% endfor %}
-        </ul>
-    </li>
-    {% endfor %}
-</ol>
+{% for questionario in object_list %}
+<div class="row">
+    <div class="col-lg-12">
+    <p><h5>Questionario: {{questionario.nome}}, id: {{questionario.id}}</h5></p>
+    <p>
+        <a class="btn btn-primary" href="{% url "questionarios:update" questionario.id %}">Editar</a>
+        <a class="btn btn-primary" href="{% url "questionarios:delete" questionario.id %}">Deletar</a>
+        <a class="btn btn-primary" href="{% url "questionarios:create_pergunta_tipo" questionario.id %}">Adicionar Pergunta</a>
+        <a class="btn btn-primary" href="{% url "questionarios:delete" questionario.id %}">Ordenar</a>
+    </p>
+    
+    <ul class="list-group">
+        {% for pergunta_do_questionario in questionario.perguntas_ordenadas %}
+        <li class="list-group-item">
+            {{pergunta_do_questionario.ordem}} - {{pergunta_do_questionario.pergunta.variavel}}
+            <a href="{% url "questionarios:update_pergunta" pergunta_do_questionario.questionario.id pergunta_do_questionario.pergunta.id %}"><span class="badge badge-secondary">Editar</span></a> 
+            <a href="{% url "questionarios:delete_pergunta_do_questionario" pergunta_do_questionario.id %}"><span class="badge badge-secondary">Remover</span></a>
+        </li>
+        {% empty %}
+        <li class="list-group-item">Nenhuma pergunta</li>
+        {% endfor %}
+    </ul>
+    </div>
+</div>
+{% endfor %}
+
+
 {% endblock %}
