--- a/pmsb_web/questionarios/templates/questionarios/update_pergunta.html
+++ b/pmsb_web/questionarios/templates/questionarios/update_pergunta.html
@@ -1,12 +1,40 @@
 {% extends "questionarios/base.html" %}
 
-
-{% block titulo %} {{block.super}} {{object.verbose_name_tipo}} {% endblock titulo %}
-
 {% block conteudo %}
-<form method="post">
-    {% csrf_token %}
-    {% include "includes/form.html" with form=form %}
-    <button type="submit" class="btn btn-primary">Submit</button>
-</form>
+
+<div class="row">
+    <div class="col-lg-12">
+        <h3>
+            {{object.verbose_name_tipo}}
+        </h3>
+        
+        <form method="post">
+            {% csrf_token %}
+            {% include "includes/form.html" with form=form %}
+            <a class="btn btn-primary" href="{% url "questionarios:list" %}">Voltar</a>
+            <button type="submit" class="btn btn-success">Salvar</button>
+        </form>
+    </div>
+</div>
+
+{% if object.tipo == 0 %}
+<div class="row">
+    <div class="col-lg-12">
+        <ul class="list-group">
+        {% for a in b %}
+        
+        {% empty %}
+            <li class="list-group-item">Não existem escolhas</li>
+        {% endfor %}
+        </ul>
+    </div>
+</div>
+
+<div class="row">
+    <div class="col-lg-12">
+        <a class="btn btn-primary" href="#">Adicionar Escolha</a>
+    </div>
+</div>
+{% endif %}
+
 {% endblock %}
