remove btn do base

--- a/pmsb_web/questionarios/templates/questionarios/base.html
+++ b/pmsb_web/questionarios/templates/questionarios/base.html
@@ -14,7 +14,7 @@
     <div class="row">
         <div class="col-lg-12">
         {% block ul_menu %}
-        <a class="btn btn-success" href=" {% url "questionarios:create"%}">Novo Questionario</a>
+        
         {% endblock ul_menu%}
         </div>
     </div>       
@@ -22,7 +22,7 @@
     <div class="row">
         <div class="col-lg-12">
         {% block conteudo%}
-            Treta   
+            super   
         {% endblock %}
         </div>
     </div>
