--- a/pmsb_web/questionarios/templates/questionarios/update_pergunta.html
+++ b/pmsb_web/questionarios/templates/questionarios/update_pergunta.html
@@ -18,11 +18,20 @@
 </div>
 
 {% if object.tipo == 0 %}
+
+<div class="row">
+    <div class="col-lg-12">
+        <h4>Possiveis Escolhas</h4>
+    </div>
+</div>
+
 <div class="row">
     <div class="col-lg-12">
         <ul class="list-group">
-        {% for a in b %}
-        
+        {% for a in object.possiveis_escolhas.all %}
+            <li class="list-group-item">{{a.texto}} 
+                <a href="{% url "questionarios:delete_possivelescolha" object.pk a.pk %}"><span class="badge badge-secondary">Remover</span></a>
+            </li>
         {% empty %}
             <li class="list-group-item">Não existem escolhas</li>
         {% endfor %}
@@ -32,7 +41,7 @@
 
 <div class="row">
     <div class="col-lg-12">
-        <a class="btn btn-primary" href="#">Adicionar Escolha</a>
+        <a class="btn btn-primary" href="{% url "questionarios:create_possivelescolha" object.pk %}">Adicionar Escolha</a>
     </div>
 </div>
 {% endif %}
