--- a/pmsb_web/questionarios/templates/questionarios/create_questionario.html
+++ b/pmsb_web/questionarios/templates/questionarios/create_questionario.html
@@ -7,6 +7,6 @@
 <form method="post">
     {% csrf_token %}
     {% include "includes/form.html" with form=form %}
-    <button type="submit" class="btn btn-primary">Submit</button>
+    <button type="submit" class="btn btn-primary">Criar</button>
 </form>
 {% endblock %}
