--- a/pmsb_web/questionarios/templates/questionarios/ordenar_detail.html
+++ b/pmsb_web/questionarios/templates/questionarios/ordenar_detail.html
@@ -1,24 +1,20 @@
 {% extends "questionarios/base.html" %}
 
-{% block ul_menu %}
-<a class="btn btn-success" href=" {% url "questionarios:create"%}">Novo Questionario</a>
-{% endblock ul_menu%}
-
 {% block conteudo %}
 
-{% for questionario in object_list %}
 <div class="row">
     <div class="col-lg-12">
-    <p><h5>Questionario: {{questionario.nome}}, id: {{questionario.id}}</h5></p>
+    <p><h5>Questionario: {{object.nome}}, id: {{object.id}}</h5></p>
+
     <p>
-        <a class="btn btn-primary" href="{% url "questionarios:update" questionario.id %}">Editar</a>
-        <a class="btn btn-primary" href="{% url "questionarios:delete" questionario.id %}">Deletar</a>
-        <a class="btn btn-primary" href="{% url "questionarios:create_pergunta_tipo" questionario.id %}">Adicionar Pergunta</a>
+        <a class="btn btn-primary" href="{% url "questionarios:update" object.id %}">Editar</a>
+        <a class="btn btn-primary" href="{% url "questionarios:delete" object.id %}">Deletar</a>
+        <a class="btn btn-primary" href="{% url "questionarios:create_pergunta_tipo" object.id %}">Adicionar Pergunta</a>
         <a class="btn btn-primary" href="{% url "questionarios:ordenar" questionario.id %}">Ordenar</a>
     </p>
     
-    <ul class="list-group">
-        {% for pergunta_do_questionario in questionario.perguntas_ordenadas %}
+    <ul id="sortable" class="list-group">
+        {% for pergunta_do_questionario in object.perguntas_ordenadas %}
         <li class="list-group-item">
             {{pergunta_do_questionario.ordem}} - {{pergunta_do_questionario.pergunta.variavel}}
             <a href="{% url "questionarios:update_pergunta" pergunta_do_questionario.pergunta.id %}"><span class="badge badge-secondary">Editar</span></a> 
@@ -30,7 +26,17 @@
     </ul>
     </div>
 </div>
-{% endfor %}
-
 
 {% endblock %}
+
+{% block js %}
+
+<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+<script>
+$( function() {
+  $( "#sortable" ).sortable();
+  
+} );
+</script>
+
+{% endblock js %}
