--- a/pmsb_web/questionarios/templates/questionarios/create_pergunta.html
+++ b/pmsb_web/questionarios/templates/questionarios/create_pergunta.html
@@ -7,6 +7,7 @@
 <form method="post">
     {% csrf_token %}
     {% include "includes/form.html" with form=form %}
-    <button type="submit" class="btn btn-primary">Submit</button>
+    <a class="btn btn-primary" href="{% url "questionarios:list" %}">Voltar</a>
+    <button type="submit" class="btn btn-primary">Criar</button>
 </form>
 {% endblock %}
