--- a/pmsb_web/conta/templates/dashboard/index.html
+++ b/pmsb_web/conta/templates/dashboard/index.html
@@ -23,6 +23,9 @@
           <a class="dropdown-item" href="{% url 'conta:user_dados'  %}">
             <i class="fa icon-user"></i> Conta
           </a>
+          <a class="dropdown-item" href="{% url 'conta:perfil_list' %}">
+            <i class="fa icon-user"></i> Perfil
+          </a>
           <div class="dropdown-header text-center">
             <strong>Tarefas</strong>
           </div>
