tirando id do atributo no template do listview

--- a/pmsb_web/conta/templates/dashboard/perfil_list.html
+++ b/pmsb_web/conta/templates/dashboard/perfil_list.html
@@ -18,7 +18,7 @@
                         <tbody>
                             {% for atributo in atributos %}
                             <tr>
-                                <td>{{atributo.0.nome}} {{atributo.0.id}} </td>
+                                <td>{{atributo.0.nome}}</td>
                                 {% if atributo.1 %}
                                 <td style="text-align:center">
                                     <span class="badge badge-info">Preenchido</span>
