fav icon no padrao dos icones no core-ui quando ativados -> ficando azul

--- a/pmsb_web/conta/templates/dashboard/index.html
+++ b/pmsb_web/conta/templates/dashboard/index.html
@@ -67,11 +67,11 @@
             <ul class="nav-dropdown-items">
               <li class="nav-item">
                 <a class="nav-link" href="{% url 'conta:departamento_tree' %}">
-                  <i class="fa fa-building-o"></i>Departamentos</a>
+                  <i class="nav-icon fa fa-building-o"></i>Departamentos</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="{% url 'conta:cargo_tree' %}">
-                  <i class="fa fa-address-card"></i>Cargos</a>
+                  <i class="nav-icon fa fa-address-card"></i>Cargos</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="{% url 'conta:hierarquia_tree' %}">
