passa somente o pk do pergunta_do_questionario para pk, usa pergunta do questionario para acessar pergunta e questionario nas views que dependem de ir e voltar entre perguntas e questionario

--- a/pmsb_web/questionarios/templates/questionarios/create_possivelescolha.html
+++ b/pmsb_web/questionarios/templates/questionarios/create_possivelescolha.html
@@ -9,6 +9,6 @@ Pergunta - {{pergunta_object}}
     {% csrf_token %}
     {% include "includes/form.html" with form=form %}
     <button type="submit" class="btn btn-primary">Adicionar</button>
-    <a class="btn btn-danger" href="{% url "questionarios:update_pergunta" pergunta_object.pk %}">Cancelar</a>
+    <a class="btn btn-danger" href="{% url "questionarios:update_pergunta"  pergunta_do_questionario_pk %}">Cancelar</a>
 </form>
 {% endblock %}
