--- a/pmsb_web/questionarios/templates/questionarios/update_pergunta.html
+++ b/pmsb_web/questionarios/templates/questionarios/update_pergunta.html
@@ -42,7 +42,7 @@
 
 <div class="row">
     <div class="col-lg-12">
-        <a class="btn btn-primary" href="{% url "questionarios:create_possivelescolha" object.pk %}">Adicionar Escolha</a>
+        <a class="btn btn-primary" href="{% url "questionarios:create_possivelescolha" pergunta_do_questionario_pk %}">Adicionar Escolha</a>
     </div>
 </div>
 {% endif %}
