crud figura muda templates dos blocos

--- a/pmsb_web/relatorios/templates/relatorios/detail_relatorio.html
+++ b/pmsb_web/relatorios/templates/relatorios/detail_relatorio.html
@@ -1,4 +1,8 @@
 <p>
+    <a href="">Editar</a>
+    <a href="{% url "relatorios:list_figura" object.pk %}">Figuras</a>
+</p>
+<p>
     {{object.titulo}}
 </p>
 <p>
