padronizacao do card-box

--- a/pmsb_web/pinax/messages/templates/pinax/messages/inbox.html
+++ b/pmsb_web/pinax/messages/templates/pinax/messages/inbox.html
@@ -4,7 +4,7 @@
     <div class="card">
         <div class="card-header">
             <i class="fa fa-tasks"></i> Tarefas
-            <a class="button" style="float: right;" href="{% url 'pinax_messages:message_create' %}">
+            <a class="btn btn-primary" style="float: right;" href="{% url 'pinax_messages:message_create' %}">
                 <i class="fa fa-tasks"></i>
                 Designar Tarefa
             </a>
