--- a/pmsb_web/relatorios/templates/relatorios/list_relatorio.html
+++ b/pmsb_web/relatorios/templates/relatorios/list_relatorio.html
@@ -1,10 +1,18 @@
-{% for r in object_list %}
+{% extends "base/base.html" %} {% block conteudo %}
 
-{{r}}
-dono:{{r.usuario}}
-<a href="{% url "relatorios:detail_relatorio" r.pk %}">{{r.titulo}}</a>
-<br>
-
-{% empty %}
-sem relatorios
-{% endfor %}
+<div class="card-header">
+    <i class="nav-icon icon-note"></i> Relatórios
+    <a class="btn btn-primary" style="float: right;" href="{% url 'relatorios:create_relatorio'%}">
+        <i class="fa fa-tasks"></i>
+        Novo Relatório
+    </a>
+</div>
+<div class="card-body">
+    {% for r in object_list %} Título: {{r}} {% comment %} dono:{{r.usuario}} {% endcomment %}
+    <a href="{% url 'relatorios:detail_relatorio' r.pk %}"><span class="badge badge-secondary">Editar</span></a>
+    <br>
+    {% empty %}
+    <li class="list-group-item">Nenhum relatório</li>
+    {% endfor %}
+</div>
+{% endblock %}
