adequacoes no form e templates das view do relatorios
FIX: problema de normalizacao do relatorio ( duplicata quando adiciona um bloco )

--- a/pmsb_web/relatorios/templates/relatorios/detail_relatorio.html
+++ b/pmsb_web/relatorios/templates/relatorios/detail_relatorio.html
@@ -5,9 +5,12 @@
     </h2>
     <hr>
     <p>
-        <a href="{% url 'relatorios:update_relatorio' object.pk %}">Editar</a>
-        <a href="{% url 'relatorios:list_figura' object.pk %}">Gerenciar Figuras</a>
-        <a href="{% url 'relatorios:list_figura' object.pk %}" style="float:right;">Visualizar PDF</a>
+        <a class="btn btn-primary" href="{% url 'relatorios:list_figura' object.pk %}">
+            <i aria-hidden="true" data-hidden="true" class="fa fa-image" style="color:white;"></i>Gerenciar Figuras</a>
+        <a class="btn btn-primary" href="#">
+            <i aria-hidden="true" data-hidden="true" class="fa fa-file-text-o fa-fw" style="color:white;"></i>Visualizar PDF</a>
+        
+        <a class="btn btn-primary" href="{% url 'relatorios:list_relatorio' %}" style="float:right;">Voltar</a>
     </p>
     <p>
         {{object.usuario}}
@@ -16,10 +19,23 @@
         {{object.criado_em}}
     </p>
 
-    {% comment %} aplicar dtree nos bloco {% endcomment %} {% for bloco in object.blocos.all %}
     <p>
-        <h3>{{bloco.titulo}}</h3>
-        {{bloco.texto}}
+        Índice <a href="{% url 'relatorios:create_bloco' object.pk  %}"><span class="badge badge-secondary">Inserir subnível</span></a>
     </p>
-    {% endfor %} {% endblock %}
+
+    {% comment %} aplicar dtree nos bloco {% endcomment %} 
+    <script type="text/javascript">
+    {% for bloco in object.blocos.all %}
+        d = new dTree('d');
+        d.add(0,-1,'Sumário');
+        d.add('{{bloco.id}}', '{{bloco.superior.id}}', '{{bloco.titulo}}');
+        document.write(d);
+    {% empty %}
+    <p>
+        Sem itens
+    </p>
+    {% endfor %}
+    </script>
+    {% endblock %}
+
 </div>
