--- a/pmsb_web/relatorios/templates/relatorios/create_figura.html
+++ b/pmsb_web/relatorios/templates/relatorios/create_figura.html
@@ -1,6 +1,10 @@
+{% extends "base/base.html" %} {% block conteudo %}
 <form method="post" enctype="multipart/form-data">
     {% csrf_token %}
+    <div class="card-body p-4">
     {% include "includes/form.html" with form=form %}
     <a class="btn btn-primary" href="{% url "relatorios:list_figura" relatorio_object.pk %}">Voltar</a>
     <button type="submit" class="btn btn-primary">Criar</button>
+    </div>
 </form>
+{% endblock %}
