--- a/pmsb_web/relatorios/templates/relatorios/create_bloco.html
+++ b/pmsb_web/relatorios/templates/relatorios/create_bloco.html
@@ -1,6 +1,10 @@
+{% extends "base/base.html" %} {% block conteudo %}
 <form method="post" enctype="multipart/form-data">
     {% csrf_token %}
+    <div class="card-body p-4">
     {% include "includes/form.html" with form=form %}
-    <a class="btn btn-primary" href="">Voltar</a>
     <button type="submit" class="btn btn-primary">Criar</button>
+    <a class="btn btn-primary" href="{% url 'relatorios:detail_relatorio' relatorio_object.pk %}" style="float:right;">Voltar</a>
+    </div>
 </form>
+{% endblock %}
