--- a/pmsb_web/relatorios/templates/relatorios/update_relatorio.html
+++ b/pmsb_web/relatorios/templates/relatorios/update_relatorio.html
@@ -1,6 +1,10 @@
+{% extends "base/base.html" %} {% block conteudo %}
 <form method="post">
     {% csrf_token %}
-    {% include "includes/form.html" with form=form %}
-    <a class="btn btn-primary" href="{% url "relatorios:list_relatorio" %}">Voltar</a>
-    <button type="submit" class="btn btn-primary">Criar</button>
+    <div class="card-body p-4">
+        {% include "includes/form.html" with form=form %}
+        <a class="btn btn-primary" href="{% url 'relatorios:list_relatorio' %}">Voltar</a>
+        <button type="submit" class="btn btn-primary">Criar</button>
+    </div>
 </form>
+{% endblock %}
