--- a/pmsb_web/relatorios/templates/base/base.html
+++ b/pmsb_web/relatorios/templates/base/base.html
@@ -1,11 +1,7 @@
 {% extends "dashboard/index.html" %} {% block main %}
-<div class="container-fluid" style="margin-top: 10px">
-    <div class="row justify-content-center">
-        <div class="col-md-10">
-            <div class="card mx-4">
-                    {% block conteudo %} {% endblock %}
-            </div>
-        </div>
+<div class="justify-content-center pinax-messages-inbox-container" style="margin-top: 10px;">
+    <div class="card">
+        {% block conteudo %} {% endblock %}
     </div>
 </div>
 
