--- a/pmsb_web/relatorios/templates/relatorios/list_figura.html
+++ b/pmsb_web/relatorios/templates/relatorios/list_figura.html
@@ -2,18 +2,27 @@
 <div class="card-body p-4">
     <h2 style="text-align: center;">Figuras</h2>
     <hr>
-    <a class="btn btn-primary" href="{% url 'relatorios:create_figura' relatorio_object.pk %}"><i aria-hidden="true" data-hidden="true" class="fa fa-image" style="color:white;"></i>Nova Figura</a>
-    <a class="btn btn-primary" href="{% url 'relatorios:detail_relatorio' relatorio_object.pk %}" style="float:right;"><i aria-hidden="true" data-hidden="true" class="fa icon-note" style="color:white;"></i>Voltar ao Relatório</a>
+    <a class="btn btn-primary" href="{% url 'relatorios:create_figura' relatorio_object.pk %}">
+        <i aria-hidden="true" data-hidden="true" class="fa fa-image" style="color:white;"></i>Nova Figura</a>
+    <a class="btn btn-primary" href="{% url 'relatorios:detail_relatorio' relatorio_object.pk %}" style="float:right;">
+        <i aria-hidden="true" data-hidden="true" class="fa icon-note" style="color:white;"></i>Voltar ao Relatório</a>
     <div class="row" style="padding-top: 10px;">
         {% for figura in object_list %} {{figura.url}}
         <div class="col-sm-6 col-md-4">
             <div class="card">
-                    <a href "{{figura.imagem.url}}">
-                        <img class="card-img-top" src="{{figura.imagem.url}}" alt="">
-                    </a>
-                <div class="card-footer">
-                    <p class="card-text">{{figura.legenda}}</p>
-                    <p class="card-text">{{figura.descricao}}</p>
+                <a target="_blank" href="{{figura.imagem.url}}">
+                    <img class="card-img-top" src="{{figura.imagem.url}}" alt="">
+                </a>
+                <div class="card-body">
+                    <div class="row">
+                        <div class="col-lg">
+                            <p class="card-text">Legenda: {{figura.legenda}}</p>
+                        </div>
+                        <div class="col-lg">
+                            <a class="btn btn-danger" href="{% url 'relatorios:delete_figura' figura.pk %}">
+                                <i aria-hidden="true" data-hidden="true" class="fa fa-trash" style="color:white;"></i>Excluir</a>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
